assets/css/style.css
/* ... */
/* aligns (centers) the image of the product card */
.product-card__img img {
  width: 95%;
  margin: auto;
}

/* styles the "slogan" for the product card images, no <figcaption> because the slogan does not describe the image */
.product-card__img-text {
  background-color: #fff;
  color: var(--color-text-secondary);
  font-family: cursive, Arial, Helvetica, sans-serif;
  width: 95%;
  margin: auto;
}

/* arranges buttons in the product card */
.product-card__button-align {
  display: flex;
  flex-direction: column;
  align-items: center;
}

/* removes slides which will be displayed later (10seconds) through JavaScript 'shopping_gallery' */
.mySlidesAction,
.mySlidesRelax,
.mySlidesDiscover {
  position: relative;
}

/* >>> start Fading animation */
.fade {
  -webkit-animation-name: fade;
  -webkit-animation-duration: 10s;
  animation-name: fade;
  animation-duration: 10s;
}

@-webkit-keyframes fade {
  from {
    opacity: .6
  }

  to {
    opacity: 1
  }
}

@keyframes fade {
  from {
    opacity: .6
  }

  to {
    opacity: 1
  }
}

/* <<< end Fading animation */
/* <<< end card */

/* >>> start button and menu*/
.button {
  /* position: relative; */
  background: rgb(237, 255, 236);
  background: radial-gradient(circle, rgba(237, 255, 236, 1) 0%, rgba(250, 149, 0, 1) 0%, rgba(235, 100, 36, 1) 54%);
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  border: none;
  font-size: 2rem;
  color: var(--color-button-text);
  padding: 1rem;
  margin: 1rem 0;
  width: 15rem;
  text-align: center;
  border-radius: 20px;
  overflow: hidden;
  cursor: pointer;
  text-decoration: none;
}

/* small button size for mobile first */
.button--mobile {
  width: 6rem;
}

/* button hidden on mobile first */
.button--show-desktop {
  display: none;
}

/* feedback to user that the element is a button */
.button:hover,
.button:focus {
  background: var(--color-button-selected);
}

/* feedback to user that the element is a link */
footer i:hover {
  color: var(--color-button-selected);
}

/* <<< end button and menu */

/* >>> start user rating testimonies */
/* gives color to positive user rated star */
.checked {
  color: orange;
}

/* groups user image with user name, occupation and rating together */
.user-header {
  display: flex;
  justify-content: space-evenly;
  margin-left: 5%;
  width: 90%;
}

/* defines the same size for all user images */
.user-img {
  border-radius: 50%;
  display: inline-block;
  height: 6rem;
  margin: 1rem 1rem;
  width: 6rem;
}

/* name of the user */
.user-name {
  font-size: 1.8rem;
  margin-bottom: 0.1rem;
}

/* user occupation */
.user-job {
  font-size: 1rem;
  margin: 0;
  padding: 0.5rem;
}

/* user quote */
.user-quote {
  font-size: 1.3rem;
  font-style: italic;
  height: 14.5rem;
  margin: 1rem 12% 1rem 12%;
}

/* <<< end user rating testimonies */

/* >>> start faq */
/* style heading for summary*/
summary h2,
summary h3 {
  display: inline-block;
}

.answer-faq {
  font-style: italic;
}

/* >> end faq */

/* >>> start about us */
/* groups the profile picture and the text together */
.profile-text {
  margin-left: 10%;
  width: 80%;
}

/* defines the size of the owners profile picture */
.profile-me {
  border-radius: 50%;
  float: left;
  height: 10rem;
  margin: 2rem 2rem 1rem 0;
  width: auto;
}

/* clears the float after the p element */
.clear-float-after:after {
  content: "";
  clear: both;
  display: table;
}

/* emphasizes the slogan */
.slogan {
  font-weight: bolder;
}

/* profile picture of the team */
.profile-team {
  margin: 2rem 2rem 1rem 0;
  border-radius: 10%;
  float: left;
}

/* <<< end about us */

/* >>> start contact us */
.contact-heading {
  font-weight: bolder;
  font-size: 2.2rem;
  list-style-type: none;
}

/* styles list items for contact */
.contact-text {
  font-style: italic;
  font-weight: normal;
  font-size: 1.4rem;
  list-style-type: none;
}

/* >>> end contact us */

/* >>> start footer */
footer {
  background-color: white;
  background-image: url(../images/frank-mckenna-eXHeq48Z-Q4-unsplash.webp);
  background-size: cover;
  margin: 1rem 0 0 0;
}

/* >>> start social media */
.social-media {
  padding-top: 2rem;
  margin: 2rem 0;
  font-size: 6rem;
  display: flex;
  justify-content: space-evenly;
}

/* color for social media icons */
.social-media i {
  color: var(--color-headings);
}

/* <<< end social media links */

/* copy right */
.copy {
  font-size: 1rem;
}

/* <<< end footer */

/* >>> start more_info page */
.include-all {
  margin: auto;
  width: fit-content;
  text-align: left;
}

.new-bullet {
  list-style: url(../images/icons/thumbs-up-icon-24.png);
}

.pack-image img {
  width: 95%;
  margin: auto;
  border-radius: 2rem;
}

table {
  width: 95%;
  margin: 2.5%;
  margin-bottom: 1rem;
  border-collapse: collapse;
}

tr,
th,
td {
  font-size: 1.2rem;
  padding: 0.5rem;
}

th {
  padding-right: 1rem;
}

td {
  text-align: left;
  padding: 1rem;
  border-left: dashed var(--color-button-selected) 1px;
}

.table-border {
  border-top: dashed var(--color-button-selected) 1px;
  border-bottom: dashed var(--color-button-selected) 1px;
}

.price {
  color: var(--color-headings);
  font-weight: bold;
  font-size: 1.5rem;
  height: 3rem;
}

.flash {
  -webkit-animation-name: flash;
  -webkit-animation-duration: 1s;
  animation-name: flash;
  animation-duration: 1s;
  animation-iteration-count: infinite;
  margin: 2rem 0;
}

@-webkit-keyframes flash {
  from {
    font-size: 1.5rem;
    opacity: .6
  }

  to {
    font-size: 1.6rem;
    opacity: 1
  }
}

@keyframes flash {
  from {
    font-size: 1.5rem;
    opacity: .6
  }

  to {
    font-size: 1.6rem;
    opacity: 1
  }
}
/* ... */

